# RGP was built to enable E2EE for a broad range of applications
#
# Copyright (C) 2024  Ordinary Labs, LLC
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
authors = ["sean watters <sean@watters.io>"]
description = "Enabling E2EE for a broad range of applications."
categories = ["cryptography"]
edition = "2021"
homepage = "https://github.com/seanwatters/rgp"
keywords = ["e2ee", "encryption", "crypto", "security"]
license = "AGPL-3.0-only"
name = "rgp"
readme = "README.md"
repository = "https://github.com/seanwatters/rgp"
version = "0.4.0-alpha.0"

[dependencies]
blake2 = "0.10.6"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
classic-mceliece-rust = { version = "3.0.0", default-features = false, features = ["mceliece348864f"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
rand_core = "0.6.4"
uuid = { version = "1.7.0", features = ["v4"] }
rayon = { version = "1.8.1", optional = true }
x25519-dalek = { version =  "2.0.0", features = ["static_secrets"] }

# needed for classic-mceliece-rust
# maybe should add support for `rand_core` feature?
rand = { version = "0.8.5" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = ["multi-thread"]
multi-thread = ["dep:rayon"]

[[bench]]
name = "crypto"
harness = false
